# timeparsers

./: .gitignore  LICENSE  README  timeparser.cabal  timeparsers.cabal
Data/Time/: Parsers.hs
Data/Time/Parsers/: Date.hs  Tables.hs  Time.hs  Timestamp.hs  Types.hs  Util.hs
test/: Test.hs  test.cabal
