Name:                timeparsers
Version:             0.2
Synopsis:            Attoparsec parsers for various Date/Time formats.
License:             BSD3
License-file:        LICENSE
Author:              Nathan Ferris Hunter
Maintainer:          nathan.f.hunter@gmail.com
Copyright:           Nathan Ferris Hunter, 2011
Category:            Data
Build-type:          Simple
Extra-source-files:
        LICENSE
        README
        Setup.hs

Cabal-version:       >=1.2

Library
  Exposed-modules:
        Data.Time.Parsers,
        Data.Time.Parsers.Date,
        Data.Time.Parsers.Tables,
        Data.Time.Parsers.Time,
        Data.Time.Parsers.Timestamp,
        Data.Time.Parsers.Types,
        Data.Time.Parsers.Util
  Build-depends:
        base,
        bytestring,
        attoparsec == 0.10.*,
        time,
        mtl,
        convertible == 1.0.*,
        containers >= 0.3 && < 0.5
