Name:                timeparsers
Version:             0.3
Synopsis:            Attoparsec parsers for various Date/Time formats.
License:             BSD3
License-file:        LICENSE
Author:              Nathan Hunter
Maintainer:          Nathan Hunter <nathan.f.hunter@gmail.com>
Copyright:           Nathan Hunter, 2011
Category:            Data
Build-type:          Simple
Extra-source-files:
        LICENSE
        README
        Setup.hs

Cabal-version:       >=1.2

Library
  Exposed-modules:
        Data.Time.Parsers,
        Data.Time.Parsers.Date,
        Data.Time.Parsers.Tables,
        Data.Time.Parsers.Time,
        Data.Time.Parsers.Timestamp,
        Data.Time.Parsers.Types,
        Data.Time.Parsers.Util
  Build-depends:
        base >= 4 && < 5,
        bytestring >= 0.9.1 && < 0.10,
        attoparsec >= 0.10.1 && < 0.11,
        time >= 1.0 && < 1.3,
        mtl >= 2.0.1 && <= 2.1,
        convertible == 1.0.*,
        containers >= 0.3 && < 0.5
