Name:                timeparsers
Version:             0.3.3
Synopsis:            Attoparsec parsers for various Date/Time formats.
License:             BSD3
License-file:        LICENSE
Author:              Nathan Ferris Hunter
Maintainer:          Nathan Ferris Hunter <nathan.f.hunter@gmail.com>
Copyright:           Nathan Ferris Hunter, 2011
Homepage:            https://github.com/nathanfhunter/timeparsers
Stability:           Experimental
Category:            Data
Build-type:          Simple
Description:
        Parsers for various Date/Time formats, implemented in AttoParsec.

Extra-source-files:
        LICENSE
        README
        Setup.hs

Cabal-version:       >=1.2

Library
  Exposed-modules:
        Data.Time.Parsers,
        Data.Time.Parsers.Date,
        Data.Time.Parsers.Tables,
        Data.Time.Parsers.Time,
        Data.Time.Parsers.Timestamp,
        Data.Time.Parsers.Types,
        Data.Time.Parsers.Util
  Build-depends:
        base >= 4 && < 5,
        bytestring >= 0.9.1 && < 0.11,
        attoparsec >= 0.9.1.2 && < 0.14,
        time >= 1.0 && < 1.8,
        mtl >= 2.0.1 && <= 2.3,
        convertible >= 1.0 && < 1.2,
        containers >= 0.3 && < 0.5.10
